--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-map-react": "^2.1.9",
     "google-maps-react": "^2.0.6",
     "js-cookie": "^2.2.1",
+    "mapbox-gl": "^2.3.1",
     "moment": "^2.29.1",
     "query-string": "^6.13.7",
     "react": "^16.13.1",
